# mcpu

./: .gitignore  CMakeLists.txt  README.md  smngt_dev
Debug/: smngt_dev
design/: SocketProtocol.seq.violet.html  mcpu_daemon.class.violet.html  mcpu_smngt_core.class.violet.html  smngt_adm.activity.violet.html  smngt_adm.state.violet.html
src/smngt/: AdmSocketProtocol.cpp  AdmSocketProtocol.h  CustomAdmSocketProtocol.cpp  CustomAdmSocketProtocol.h  ISocketProtocol.h  SocketManager.cpp  SocketManager.h  SocketProtocol.h  main.cpp
